# snake

./: .gitignore  CMakeLists.txt  README.md  README_RUS.md
src/: CMakeLists.txt  Makefile  desktop.cc  snake.cc  tetris_cli  tetris_cli.c  tetris_desktop.cc  tetris_play  tetris_play.c
src/brick_game/data_types/: data_types.h
src/brick_game/snake/: data_types.h
src/brick_game/snake/controller/: c_controller.h  controller.cc  controller.h  controller.hpp  controller_wrapper_for_c.h
src/brick_game/snake/model/: business.cc  config.h  init.cc  model.cc  model.h  model.hpp  utils.cc
src/brick_game/snake/model/include/: apple.h  field_attr.hpp  model.h  model.hpp  object.h  snake_anim.h
src/brick_game/snake/model/objects/: object_attr.h  snake_anim.cc  snake_anim.h
src/brick_game/snake/model/snake_anim/: snake_anim.cc  snake_anim.h  snake_anim.hpp
src/brick_game/snake/model/src/: apple.cc  business.cc  gamestate.cc  gamestate_check.cc  highscore_and_level.cc  init.cc  levels.cc  snake_move.cc  speed.cc  timer.cc  timerforspeed.cc  utils.cc
src/brick_game/snake/snake del/: apple.h  object.cc  object.h
src/brick_game/snake/view/: view.h
src/brick_game/tetris/: backend.c  backend.h  tetris_backend.c  tetris_backend.h
src/brick_game/tetris/include/: backend_utils.h  collision.h  conf.h  defs.h  gamestate.h  init.h  speed_and_levels.h  tetromino_create.h  timer.h
src/brick_game/tetris/include/moving/: left_right_move.h  moving.h  moving_utils.h  rotate.h  tetromino_fall.h
src/brick_game/tetris/src/: backend_utils.c  collision.c  gamestate.c  init.c  rows_hit.c  speed_and_levels.c  tetromino_create.c  timer.c  tmino_create.c
src/brick_game/tetris/src/moving/: left_right_move.c  tmino_fall.c
src/brick_game/tetris/tetris_include/: tetris_backend_utils.h  tetris_collision.h  tetris_data_types.h  tetris_init.h  tetris_rows_hit.h  tetris_speed_and_levels.h  tetris_tetromino_create.h  tetris_timer.h
src/brick_game/tetris/tetris_src/: tetris_backend_utils.c  tetris_collision.c  tetris_init.c  tetris_rows_hit.c  tetris_speed_and_levels.c  tetris_tetromino_create.c  tetris_timer.c
src/cmake/: CMakeFormat.cmake  ClangFormat.cmake  FindCheck.cmake  VarPrint.cmake  glob_vars.cmake  single_use.cmake  snake_cli.cmake  snake_desktop.cmake  tetris_cli.cmake
src/cmake/find_modules/: CheckLibraryExists.cmake
src/cmake/find_packages/: curses.cmake  qt.cmake  tests.cmake
src/cmake/formatting/: CMakeFormat.cmake  ClangFormat.cmake
src/cmake/gcov/: Coverage.cmake
src/cmake/make_libs/: snake_back_lib.cmake  tetris_back_lib.cmake
src/cmake/srcs/: cli_gui.cmake  desktop_gui.cmake  snake_back.cmake  tetris_back.cmake
src/cmake/targets/: snake_cli.cmake  snake_desktop.cmake  tetris_cli.cmake  tetris_desktop.cmake
src/cmake/targets/main/: Uninstall.cmake
src/cmake/targets/play/: snake_cli.cmake  snake_desktop.cmake  tetris_cli.cmake  tetris_desktop.cmake
src/cmake/targets/utils/formatting/: f.cmake  (+2 more)
src/cmake/tests/: snake.cmake  tetris.cmake
src/cmake/unused_find_modules/: CMakePushCheckState.cmake  FindCurses.cmake
src/cmake/utils/: Clean.cmake  Install.cmake  glob_vars.cmake
src/coverage/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
src/coverage/snake/: controller.cc.func-c.html  controller.cc.func.html  controller.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  main.cc.func-c.html  main.cc.func.html  main.cc.gcov.html  utils.cc.func-c.html  utils.cc.func.html  utils.cc.gcov.html  zmodel.cc.func-c.html  zmodel.cc.func.html  zmodel.cc.gcov.html
src/coverage/snake_anim/: index-sort-f.html  index-sort-l.html  index.html  snake_anim.cc.func-c.html  snake_anim.cc.func.html  snake_anim.cc.gcov.html
src/coverage/src/: apple.cc.func-c.html  apple.cc.func.html  apple.cc.gcov.html  business.cc.func-c.html  business.cc.func.html  business.cc.gcov.html  gamestate.cc.func-c.html  gamestate.cc.func.html  gamestate.cc.gcov.html  highscore_and_level.cc.func-c.html  highscore_and_level.cc.func.html  highscore_and_level.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  init.cc.func-c.html  init.cc.func.html  init.cc.gcov.html  snake_move.cc.func-c.html  snake_move.cc.func.html  snake_move.cc.gcov.html  speed.cc.func-c.html  speed.cc.func.html  speed.cc.gcov.html  timer.cc.func-c.html  timer.cc.func.html  timer.cc.gcov.html  utils.cc.func-c.html  utils.cc.func.html  utils.cc.gcov.html
src/docs/brick_game_v2.0/: Doxyfile
src/docs/tetris/: Doxyfile
src/gcov/: gcov.css
src/gui/cli/: frontend.c  frontend.h  tetris_frontend.c  tetris_frontend.h
src/gui/cli/include/: frontend_utils.h  menu.h  tetris_frontend_utils.h  tetris_menu.h
src/gui/cli/src/: frontend_utils.c  menu.c  tetris_frontend_utils.c  tetris_menu.c
src/gui/desktop/: front.cc
src/gui/desktop/view/: app.h  view.h  widgets.cc  window.cc
src/make/: all.mk  clang.mk  clean.mk  cmake_format.mk  compilation.mk  compilers.mk  cppcheck.mk  dirs.mk  dist.mk  dvi.mk  exe_files.mk  format_clean.mk  gcov.mk  gdb.mk  install.mk  libs.mk  play.mk  srcs.mk  tests.mk  uninstall.mk
src/make/srcs/: snake.mk  tetris.mk
src/play/: cli.c  desktop.cc
src/test_dir/snake/: controller.cc  controller_for_c.cc  main.cc  main.hpp  utils.cc  utils.hpp  zmodel.cc
src/test_dir/tetris/: backend_test.c  backend_utils_test.c  init_test.c  left_right_move_test.c  moving_utils_test.c  rows_hit_test.c  speed_and_levels_test.c  test.c  test.h  test_utils.c  tetris_backend_utils_test.c  tetris_collision_test.c  tetris_init_test.c  tetris_left_right_move_test.c  tetris_moving_utils_test.c  tetris_rotate_test.c  tetris_speed_and_levels_test.c  tetris_test.c  tetris_test.h  tetris_tetromino_create_test.c  tetris_tetromino_fall_test.c  tetris_timer_test.c  timer_test.c  tmino_create_test.c  tmino_fall_test.c
src/tetris_docs/: Doxyfile
src/tetris_test_dir/: test_utils.c  test_utils.h  tetris_backend_test.c  tetris_rows_hit_test.c  tetris_tetromino_create_test.c
(+105 files in other folders)
